fixtures/cs-hash-01/good/verify-only-no-hash.ts
export function verifyPassword(password: string, expected: string) {
	return password.length === expected.length;
}
