fixtures/cs-hash-01/bad/create-hash-sha-1-hyphen.ts
import { createHash } from "crypto";

export function hashPassword(password: string) {
	return createHash("sha-1").update(password).digest("hex");
}
